--- a/index.html
+++ b/index.html
@@ -255,8 +255,7 @@
 
 <h1 id="biography">Biography</h1>
 
-<p>I graduated from <strong><a href="https://en.snu.ac.kr/index.html" target="_blank">Seoul National University</a></strong> with B.S. in <strong><a href="https://physics.snu.ac.kr/en" target="_blank">Physics</a></strong>. I am a researcher working at <strong><a href="https://qgl.snu.ac.kr/" target="_blank">Quantum Gas Lab</a></strong>, advised by <strong><a href="https://qgl.snu.ac.kr/members" target="_blank">Prof. Yong-il Shin</a></strong>. My research passion centers on leveraging ultracold platforms for diverse applications: quantum computation, quantum simula- 
-tion, exotic phases in quantum many-body physics, precise measurement, and other novel phenomena to expand the horizon of physics. 
+<p>I graduated from <strong><a href="https://en.snu.ac.kr/index.html" target="_blank">Seoul National University</a></strong> with B.S. in <strong><a href="https://physics.snu.ac.kr/en" target="_blank">Physics</a></strong>. I am a researcher working at <strong><a href="https://qgl.snu.ac.kr/" target="_blank">Quantum Gas Lab</a></strong>, advised by <strong><a href="https://qgl.snu.ac.kr/members" target="_blank">Prof. Yong-il Shin</a></strong>. My research passion centers on leveraging ultracold platforms for diverse applications: quantum computation, quantum simulation, exotic phases in quantum many-body physics, precise measurement, and other novel phenomena to expand the horizon of physics. 
 
     <div class="row">
       <div class="col-md-10">
