--- a/index.html
+++ b/index.html
@@ -292,36 +292,32 @@
     
   </div>
 
-<!-- ****** START One Pub Section ****** -->
-<!--
       <div class="row">
   <div class="col-lg-4 col-12" style="position: relative;style="width: 250px; height: auto;"">
-  <img src="/gif/sp.gif">
+  <img src="/gif/paper1.png">
   </div>
     
   <div class="col-12 col-lg-8" style="position: relative;padding-right: 12px;padding-left: 20px;">  
         <div class="pub-list-item" style="margin-bottom: 1rem" itemscope itemtype="http://schema.org/CreativeWork">
-          <a href="https://arxiv.org/abs/2311.17619" itemprop="name">Spatially-coded Fourier ptychography: flexible and detachable coded thin films for quantitative phase
-imaging with uniform phase transfer characteristics.</a>
+          <a href="https://link.springer.com/article/10.1007/s40042-020-00008-8" itemprop="name">Spin and mass currents near a moving magnetic obstacle in a two-component Bose–Einstein condensate.</a>
   <span itemprop="author">
-    <br>R. Wang<sup>†</sup>, L. Yang<sup>†</sup>, <strong>Y. Lee<sup>†</sup></strong>, K. Sun, K. Shen, Q. Zhao, T. Wang, Z. Zhang, J. Liu, P. Song, and G. Zheng </span>
-  <br><strong>arXiv preprint (2023)</strong>
+    <br><strong>J. H. Jung</strong>, H. J. Kim, and Y. Shin </span>
+  <br>Journal of the Korean Physical Society <strong>78<\strong>,  19–26 (2021)
 
   <p>
-<a class="btn btn-outline-primary my-1 mr-1 btn-sm" href="https://arxiv.org/abs/2311.17619" target="_blank" rel="noopener">
-  Preprint
+<a class="btn btn-outline-primary my-1 mr-1 btn-sm" href="https://arxiv.org/abs/2010.16067" target="_blank" rel="noopener">
+  arXiv
 </a>
 
-<a class="btn btn-outline-primary my-1 mr-1 btn-sm" href="/paperpdf/SP.pdf" target="_blank" rel="noopener">
-  PDF
+<a class="btn btn-outline-primary my-1 mr-1 btn-sm" href="https://link.springer.com/article/10.1007/s40042-020-00008-8" target="_blank" rel="noopener">
+  Journal
 </a>
 
 </p>
 </div>
 </div>
 </div>
-      -->
-<!-- ****** END One Pub Section ****** -->      
+   
 
 
     </div>
