--- a/index.html
+++ b/index.html
@@ -302,7 +302,7 @@
           <a href="https://link.springer.com/article/10.1007/s40042-020-00008-8" itemprop="name">Spin and mass currents near a moving magnetic obstacle in a two-component Bose–Einstein condensate.</a>
   <span itemprop="author">
     <br><strong>J. H. Jung</strong>, H. J. Kim, and Y. Shin </span>
-  <br>Journal of the Korean Physical Society <strong>78<\strong>,  19–26 (2021)
+  <br>Journal of the Korean Physical Society <strong>78</strong>,  19–26 (2021)
 
   <p>
 <a class="btn btn-outline-primary my-1 mr-1 btn-sm" href="https://arxiv.org/abs/2010.16067" target="_blank" rel="noopener">
