--- a/index.html
+++ b/index.html
@@ -317,6 +317,32 @@
 </div>
 </div>
 </div>
+
+      <div class="row">
+  <div class="col-lg-4 col-12" style="position: relative;style="width: 250px; height: auto;"">
+  <img src="/gif/paper2.png">
+  </div>
+    
+  <div class="col-12 col-lg-8" style="position: relative;padding-right: 12px;padding-left: 20px;">  
+        <div class="pub-list-item" style="margin-bottom: 1rem" itemscope itemtype="http://schema.org/CreativeWork">
+          <a href="https://journals.aps.org/pra/abstract/10.1103/PhysRevA.107.023310" itemprop="name">Minimum critical velocity of a Gaussian obstacle in a Bose-Einstein condensate.</a>
+  <span itemprop="author">
+    <br>H. Kwak, <strong>J. H. Jung</strong>, and Y. Shin </span>
+  <br>Physical Review A <strong>107</strong>, 023310 (2023) 
+
+  <p>
+<a class="btn btn-outline-primary my-1 mr-1 btn-sm" href="https://arxiv.org/abs/2210.04403" target="_blank" rel="noopener">
+  arXiv
+</a>
+
+<a class="btn btn-outline-primary my-1 mr-1 btn-sm" href="https://journals.aps.org/pra/abstract/10.1103/PhysRevA.107.023310" target="_blank" rel="noopener">
+  Journal
+</a>
+
+</p>
+</div>
+</div>
+</div>
    
 
 
